# sandbox

./: Cargo.toml
python/mcp-server-demo/: db_setup.py  server.py
rust/mcp-poem-sse/: Cargo.toml
rust/mcp-poem-sse/src/: main.rs
rust/mcp-poem-stdio/: Cargo.toml
rust/mcp-poem-stdio/src/: main.rs
rust/mcp-sdk-sse/: Cargo.toml
rust/mcp-sdk-sse/src/: main.rs
rust/mcp-sdk-stdio/: Cargo.toml
rust/mcp-sdk-stdio/src/: main.rs
