[package]
name = "mcp-poem-sse"
version.workspace = true
edition.workspace = true

[dependencies]
poem = { version = "3.1.8", features = ["sse"] }
poem-mcpserver = { version = "0.1.8", features = ["sse"] }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4", "v7"] }
